--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,3 +19,10 @@ services:
             - "80:80"
         depends_on:
             - postgres
+
+    challenge:
+        image: challenge/app
+        ports:
+            - "8080:8080"
+        depends_on:
+            - postgres
